--- a/app/src/main/res/layout/ssearch_card_news_item.xml
+++ b/app/src/main/res/layout/ssearch_card_news_item.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
     <include
-        android:id="@id/divider"
+        android:id="@+id/divider"
         layout="@layout/ssearch_divider_horizontal" />
 
     <RelativeLayout
